Move button translation in buttons namespace

--- a/public/locales/en/buttons.json
+++ b/public/locales/en/buttons.json
@@ -1,4 +1,5 @@
 {
     "youClicked": "You clicked {{count}} time",
-    "youClicked_plural": "You clicked {{count}} times"
+    "youClicked_plural": "You clicked {{count}} times",
+    "translate": "Translate in fr"
 }
