--- a/public/locales/fr/buttons.json
+++ b/public/locales/fr/buttons.json
@@ -1,3 +1,4 @@
 {
-    "youClicked": "Vous avez cliqué {{count}} fois"
+    "youClicked": "Vous avez cliqué {{count}} fois",
+    "translate": "Traduit en en"
 }
